# projectbankappwithshhkey

./: .coverage  .flake8  .gitignore  pyproject.toml  readme.md  requirements.txt
src/: file_1.py  generators.py  masks.py  processing.py  widget.py
tests/: conftest.py  test_generators.py  test_masks.py  test_processing.py  test_widget.py
